added libass, fontconfig, expat, fribidi fixed isCommandRunning and killRunningProcesses Properly handle environment variables